--- a/Styles/color-switcher.css
+++ b/Styles/color-switcher.css
@@ -23,9 +23,9 @@
     text-align: center;
     font-size: 20px;
     background: var(--bg-white-100);
-    color: var(--text-black-900);
+    color: var(--skin-color);
     right: 100%;
-    border: 1px solid var(--bg-blue-50);
+    border: 1px solid var(--skin-color);
     margin-right: 25px;
     cursor: pointer;
     transition: all 0.3s ease;
