--- a/Styles/style.css
+++ b/Styles/style.css
@@ -382,12 +382,12 @@ h3.my-profession{
 
 .resume .resume-slide .r-slide .resume-content h3{
     font-size: 35px;
-    color: var(--skin-color);
+    color: var(--bg-white-900);
 }
 
 .resume .resume-slide .r-slide .resume-content p{
     font-size: 16px;
-    color: rgb(0, 0, 0);
+    color: var(--text-black-900);
     padding: 10px 0;
 }
 
@@ -400,7 +400,7 @@ h3.my-profession{
 }
 
 .resume .resume-slide:nth-child(1) .r-slide{
-    background: linear-gradient(90deg, #f2f2fc00 70%, var(--skin-color) 30.1%);
+    background: linear-gradient(90deg, var(--skin-color) 70%, white 30.1%);
     border: 1px solid var(--skin-color);
 }
 
@@ -459,7 +459,7 @@ h3.my-profession{
 }
 
 .resume-content h4{
-    color: var(--skin-color);
+    color: var(--bg-white-900);
 }
 
 .resume-content h4 span{
@@ -489,11 +489,11 @@ h3.my-profession{
 
 @media(max-width: 991px){
     .resume .resume-slide:nth-child(1) .r-slide{
-        background: white;
+        background: var(--bg-white-900);
         border: 1px solid var(--skin-color);
     }
     .resume #next{
-        color: white;
+        color: var(--bg-white-900);
         background: var(--skin-color);
     }
 }
@@ -514,6 +514,12 @@ h3.my-profession{
     font-size: 3em;
     margin-bottom: 15px;
     padding: 5px 15px;
+    color: var(--text-black-900);
+}
+
+.service-content p {
+    font-size: 20px;
+    color: var(--text-black-900);
 }
 
 .service-box{
@@ -660,7 +666,7 @@ h3.my-profession{
 
 #marquee .pic-container {
     display: flex;
-    animation: marquee 10s infinite linear;
+    animation: marquee 15s infinite linear;
 }
 
 #marquee .pic-container .pic {
@@ -671,7 +677,7 @@ h3.my-profession{
 #marquee img {
     width: 100%;
     object-fit: cover;
-    border: 1px solid rgba(238, 231, 231, 0.9);
+    border: 1px solid var(--skin-color);
 }
 
 @media (max-width: 1024px) {
@@ -776,7 +782,7 @@ h3.my-profession{
 }
 
 .video-link{
-    color: black;
+    color: var(--text-black-900)
 }
 
 /* .video-link:hover{
@@ -831,12 +837,12 @@ h3.my-profession{
 
 .contact-content .contact-details h2{
     font-size: 3em;
-    color: black;
+    color: var(--text-black-900);
     font-weight: 500;
 }
 
 .contact-content .contact-details p{
-    color: black;
+    color: var(--text-black-900);
     font-size: 1.1em;
     font-weight: 300;
 }
@@ -886,17 +892,17 @@ h3.my-profession{
     flex-direction: column;
     margin-left: 20px;
     font-size: 1.1em;
-    color: black;
+    color: var(--text-black-900);
     font-weight: 300;
 }
 
 .contact-container .contactInfo .contactBox .contactText h3{
     font-weight: 500;
-    color: black;
+    color: var(--text-black-900);
 }
 
 .contact-container .contactInfo .socialText{
-    color: black;
+    color: var(--text-black-900);
     margin-top: 50px;
     font-weight: 500;
     padding-left: 10px;
@@ -923,7 +929,7 @@ h3.my-profession{
 }
 
 .sci li a:hover{
-    color: black;
+    color: var(--text-black-700);
 }
 
 .contact-container .contactForm{
@@ -936,7 +942,7 @@ h3.my-profession{
 
 .contact-container .contactForm h2{
     font-size: 2em;
-    color: white;
+    color: var(--text-black-700);
     font-weight: 500;
 }
 
@@ -989,9 +995,9 @@ h3.my-profession{
     font-weight: 500;
 }
 
-.contactText p{
-    text-transform: uppercase;
-}
+
+
+
 
 @media (max-width: 991px){
     .contact-content{
