--- a/Styles/style.css
+++ b/Styles/style.css
@@ -66,6 +66,7 @@ ul{
 .padd-15{
     padding-left: 15px;
     padding-right: 15px;
+    
 }
 
 .container{
@@ -357,6 +358,9 @@ h3.my-profession{
     position: relative;
 }
 
+.section-title h2{
+    font-family: 'righteous', sans-serif;
+}
 .resume .resume-slide .r-slide{
     min-height: 80vh;
     display: flex;
@@ -383,11 +387,13 @@ h3.my-profession{
 .resume .resume-slide .r-slide .resume-content h3{
     font-size: 35px;
     color: var(--bg-white-900);
+    font-family: 'righteous', sans-serif;
 }
 
 .resume .resume-slide .r-slide .resume-content p{
     font-size: 16px;
     color: var(--text-black-900);
+    font-weight: bolder;
     padding: 10px 0;
 }
 
@@ -469,6 +475,8 @@ h3.my-profession{
 .resume-content p{
     color: var(--text-black-900);
 }
+
+
 /* end of Resume styles */
 
 /* Making Home, Nav, Resume Responsive */
@@ -484,6 +492,27 @@ h3.my-profession{
     .resume .resume-content{
         display: block;
     }
+    .resume .resume-slide .r-slide .resume-content .digi1 {
+        font-size: 12px;
+        color: #d72727;
+        font-weight: bolder;
+        padding: 10px 0;
+    }
+    .resume .resume-slide .r-slide .resume-content .digi2 {
+        font-size: 12px;
+        color: #d72727;
+        font-weight: bolder;
+        padding: 10px 0;
+    }
+    .resume .resume-slide .r-slide .resume-content p {
+        font-size: 12px;
+        font-weight: bolder;
+        padding: 10px 0;
+    }
+    .resume .resume-slide .r-slide .resume-image img {
+        width: 100%;
+        margin-top: 30px;
+    }
 }
 
 
@@ -496,6 +525,22 @@ h3.my-profession{
         color: var(--bg-white-900);
         background: var(--skin-color);
     }
+    .resume-content{
+        margin-top: -30px;
+    }
+    .resume-slide .r-slide .resume-content .digi1,
+    .resume-slide .r-slide .resume-content .digi2 {
+        display: inline-block;
+        vertical-align: top;
+    }
+    .resume .resume-slide .r-slide .resume-content h3{
+        color: var(--skin-color);
+    }
+
+    .resume-content h4 {
+        color: var(--skin-color);
+    };
+
 }
 /* Service styles */
 
@@ -515,11 +560,13 @@ h3.my-profession{
     margin-bottom: 15px;
     padding: 5px 15px;
     color: var(--text-black-900);
+    font-family: 'Racing Sans One', sans-serif;
 }
 
 .service-content p {
     font-size: 20px;
     color: var(--text-black-900);
+    font-family: 'Londrina Solid', sans-serif;
 }
 
 .service-box{
@@ -564,68 +611,81 @@ h3.my-profession{
 
 .service-card:hover{
     background: linear-gradient(45deg,
-                                rgba(252, 250, 250, 0.8) 0%,
-                                rgba(251, 251, 252, 0.8) 30%,
-                                rgba(247, 247, 248, 0.7)100%),
-                                url('./front.png');
+                                rgba(252, 250, 250, 0) 0%,
+                                rgba(251, 251, 252, 0) 30%,
+                                rgba(247, 247, 248, 0)100%),
+                                url('https://www.trickyenough.com/wp-content/uploads/2020/08/development-scaled.jpg');
     background-size: cover;
-    opacity: 0.9;
 }
 
 .service-card:hover p{
-    color: var(--skin-color);
+    display: none;
 }
 
 .service-card:hover h2{
-    color: var(--skin-color);
+    display: none;
 }
 
 .service-card:hover i{
-    color: var(--skin-color);
+    display: none;
 }
 
 .service-card:nth-child(2):hover{
     background: linear-gradient(45deg,
-                                rgba(252, 250, 250, 0.8) 0%,
-                                rgba(248, 248, 249, 0.8) 30%,
-                                rgba(249, 249, 250, 0.7)100%),
-                                url('./BannerImg.png');
+                                rgba(252, 250, 250, 0) 0%,
+                                rgba(248, 248, 249, 0) 30%,
+                                rgba(249, 249, 250, 0)100%),
+                                url('https://ddi-dev.com/uploads/backend-is.png');
     background-size: cover;
-    /* opacity: 0.7; */
     
 }
 
 .service-card:nth-child(3):hover{
     background: linear-gradient(45deg,
-                                rgba(252, 250, 250, 0.8) 0%,
-                                rgba(243, 243, 245, 0.8) 30%,
-                                rgba(240, 240, 242, 0.7)100%),
-                                url('./BannerImg.png');
+                                rgba(252, 250, 250, 0) 0%,
+                                rgba(243, 243, 245, 0) 30%,
+                                rgba(240, 240, 242, 0)100%),
+                                url('https://www.keenesystems.com/hs-fs/hubfs/blog-images/ux-design.jpg?width=900&name=ux-design.jpg');
     background-size: cover;
-    /* opacity: 0.7; */
     
 }
 
 .service-card:nth-child(4):hover{
     background: linear-gradient(45deg,
-                                rgba(252, 250, 250, 0.8) 0%,
-                                rgba(245, 245, 246, 0.8) 30%,
-                                rgba(249, 249, 250, 0.7)100%),
-                                url('./front.png');
+                                rgba(252, 250, 250, 0) 0%,
+                                rgba(245, 245, 246, 0) 30%,
+                                rgba(249, 249, 250, 0)100%),
+                                url('https://img.etimg.com/thumb/width-1200,height-900,imgsize-52163,resizemode-75,msid-46065504/jobs/7-things-mobile-app-developers-should-focus-on.jpg');
     background-size: cover;
-    /* opacity: 0.7; */
-    
 }
 
 .service-card:nth-child(5):hover{
     background: linear-gradient(45deg,
-                                rgba(252, 250, 250, 0.8) 0%,
-                                rgba(243, 242, 247, 0.8) 30%,
-                                rgba(248, 248, 249, 0.7)100%),
-                                url('./BannerImg.png');
+                                rgba(252, 250, 250, 0) 0%,
+                                rgba(243, 242, 247, 0) 30%,
+                                rgba(248, 248, 249, 0)100%),
+                                url('https://assets-global.website-files.com/643d42d89868c10d23752e89/6459073a39921d2fa7c2b000_Data-Pipeline-graphic-crop-1024x996.png');
     background-size: cover;
-    opacity: 0.7;
     
+}
+
+.service-card:nth-child(6):hover{
+    background: linear-gradient(45deg,
+                                rgba(252, 250, 250, 0) 0%,
+                                rgba(243, 242, 247, 0) 30%,
+                                rgba(248, 248, 249, 0)100%),
+                                url('https://www.altexsoft.com/media/2018/08/devops-role-3.png');
+    background-size: cover;
+}
+
+.service-content .skillsp{
+    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 80px;
+    margin-right: 40px;
+    font-family: 'Londrina Solid', sans-serif;
 }
 
 /* Service responsive  */
@@ -678,6 +738,7 @@ h3.my-profession{
     width: 100%;
     object-fit: cover;
     border: 1px solid var(--skin-color);
+    height: 150px;
 }
 
 @media (max-width: 1024px) {
@@ -996,7 +1057,14 @@ h3.my-profession{
 }
 
 
+.contact-details h2{
+    font-family: 'righteous', sans-serif;
+}
 
+.contact-details p{
+    font-family: 'Londrina Solid', sans-serif;
+
+}
 
 
 @media (max-width: 991px){
