--- a/Styles/style.css
+++ b/Styles/style.css
@@ -845,94 +845,187 @@ h3.my-profession{
 /* Project styles */
 /* styled by DonQuaya */
 
-.projects-content{
+/* .projects-content{
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     top: 10px;
-}
-
-.projects-content video {
-    position: absolute;
-    top: -70px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* object-fit: cover; */
-    /* object-fit: ; */
-}
-
-.projects-content .navigation{
-    position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 100;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.projects-content .navigation li{
-    list-style: none;
-    cursor: pointer;
-    margin: 0 10px;
-    border-radius: 4px;
-    background: var(--skin-color);
-    padding: 3px 3px 0;
-    opacity: 0.7;
+.projects-slider{
+    position: absolute;
+    inset: 80px;
+    /* inset: 80px 200px 80px 80px; */
+/* }
+
+.projects-slider .projects-slides{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 240px;
+    height: 320px;
+    background: var(--img);
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
     transition: 0.5s;
-}
-
-.projects-content .navigation li:hover{
-    opacity: 1;
-}
-
-.projects-content .navigation li img{
-    width: 120px;
-    transition: 0.5s;
-}
-
-.projects-content .navigation li img:hover{
-    width: 200px;
-}
-
-.video-link{
-    color: var(--text-black-900)
-}
-
-/* .video-link:hover{
-    color: var(--skin-color);
+    box-shadow: 0 25px 50px var(--skin-color);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
 } */
 
-.video-link i {
-    color: var(--skin-color);
-    margin-right: 15px;
-  }
 
-.videoLinks{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/* .projects-slider .projects-slides:nth-child(1),
+.projects-slider .projects-slides:nth-child(2){
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    transform: translateY(0);
+    box-shadow: 0 25px 50px rgba(0, 0, 9, 0);
+    background-size: cover;
 }
 
-
-.videoLinks i {
-    margin-right: 5px; /* Adjust as needed for spacing */
-  }
-
-
-
-@media(max-width: 991px){
-    .projects-content .navigation li img{
-        width: 70px;
-        top: 60px;
-    }
-    .projects-content .navigation {
-        top: 200px;
-    }
+.projects-slider .projects-slides:nth-child(3){
+    left: calc(50% + 240px);
+    background-size: cover;
 }
+
+.projects-slider .projects-slides:nth-child(4){
+    left: calc(50% + 500px);
+    background-size: cover;
+}
+.projects-slider .projects-slides:nth-child(5){
+    left: calc(50% + 760px);
+    background-size: cover;
+}
+.projects-slider .projects-slides:nth-child(6){
+    left: calc(50% + 1020px);
+    background-size: cover;
+    opacity: 0;
+} */
+
+/* .slide-buttons{
+    position: absolute;
+    bottom: 15px;
+    display: flex;
+    gap: 20px;
+}
+
+.slide-buttons span{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    background: var(--skin-color);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+} */
+
+/* .slide-buttons span::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-top: 4px solid white;
+    border-left: 4px solid white;
+    transform: rotate(315deg) translate(2px, 2px);
+}
+
+.slide-buttons span:nth-child(2)::before{
+    transform: rotate(135deg) translate(2px, 2px);
+}
+
+.slide-buttons span:active{
+    opacity: 0.5;
+} */
+
+/* .slide-content{
+    position: relative;
+    padding: 40px;
+    max-width: 650px;
+    transition: 0.25s;
+    transition-delay: 0s;
+    transform: translateY(40px);
+    z-index: 10000;
+    opacity: 0;
+}
+
+.slide-content h2{
+    font-size: 4em;
+    color: rgb(245, 246, 250);
+    background: var(--skin-color);
+}
+
+.slide-content p{
+    color: rgb(249, 246, 246);
+} */
+
+
+/* .projects-slider .projects-slides:nth-child(1) .slide-content,
+.projects-slider .projects-slides:nth-child(2) .slide-content{
+    opacity: 1;
+    transform: translateY(0px);
+    transition-delay: 0.5s;
+}
+
+.git{
+    background: red;
+}
+
+.deploy{
+    background: yellow;
+} */ 
+
+
+/* 
+
+@media (max-width: 900px){
+    .projects-slider{
+        position: absolute;
+        inset: 40px 40px 200px 40px;
+    }
+    .projects-slider .projects-slides:nth-child(1),
+    .projects-slider .projects-slides:nth-child(2){
+        top: initial;
+        bottom: 0;
+    }
+    .projects-slider .projects-slides{
+        width: 100px;
+        height: 100px;
+        top: initial;
+        bottom: -170px;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+
+    }
+    .projects-slider .projects-slides:nth-child(3){
+        left: 0;
+    }
+    .projects-slider .projects-slides:nth-child(4){
+        left: 120px;
+    }
+    .projects-slider .projects-slides:nth-child(5){
+        left: 240px;
+    }
+    .projects-slider .projects-slides:nth-child(6){
+        left: 360px;
+    }
+} */
+
+
+
+
+
+
+
 
 /* end of Projects styles */
 
@@ -1175,3 +1268,224 @@ h3.my-profession{
 }
 
 /* styled by DonQuaya */
+
+
+
+/* trying new slider */
+
+.purchase-slider{
+    margin-top: 50px;
+    height: 100vh;
+    /* margin-top: -50px; */
+    position: relative;
+  }
+
+
+  /* .slider-item{
+    border: 5px solid red;
+  } */
+
+  .slider-item img{
+    border: 5px solid var(--skin-color);
+    
+  }
+  
+  .purchase-slider .slider-list .slider-item{
+    position: absolute;
+    inset: 0 0 0 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: 0.5s;
+  }
+  
+  .purchase-slider .slider-list .slider-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .purchase-slider .slider-list .slider-item::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    /* background-image: linear-gradient(to top, var(--skin-color) 5%, transparent); */
+  }
+  
+  .purchase-slider .slider-list .slider-item .purchase-content{
+    position: absolute;
+    left: 10%;
+    top: 20%;
+    width: 500px;
+    max-width: 80%;
+    z-index: 1;
+    /* background: red; */
+  }
+
+
+  .slider-item img{
+    margin-left: 40px;
+  }
+  
+  .purchase-slider .slider-list .slider-item .purchase-content p:nth-child(1){
+    text-transform: uppercase;
+    letter-spacing: 10px;
+  }
+  
+  .purchase-slider .slider-list .slider-item .purchase-content h2{
+    font-size: 100px;
+    margin: 0;
+  }
+  
+  .purchase-slider .slider-list .slider-item.active{
+    opacity: 1;
+    z-index: 10;
+  }
+  
+  @keyframes showPurchaseContent {
+    to{
+      transform: translateY(0);
+      filter: blur(0);
+      opacity: 1;
+    }
+  }
+  
+  .purchase-slider .slider-list .slider-item.active p:nth-child(1),
+  .purchase-slider .slider-list .slider-item.active h2,
+  .purchase-slider .slider-list .slider-item.active p:nth-child(3){
+    transform: translateY(30px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showPurchaseContent .5s .7s ease-in-out 1 forwards;
+  }
+  
+  .purchase-slider .slider-list .slider-item.active h2{
+    animation-delay: 1s;
+  }
+  
+  .purchase-slider .slider-list .slider-item.active p:nth-child(3){
+    animation-duration: 1.3s;
+  }
+  
+  
+  .p-arrows{
+    position: absolute;
+    top: 30%;
+    right: 50px;
+    z-index: 100;
+  }
+  
+  .p-arrows button{
+    background: var(--skin-color);
+    border: none;
+    font-family: monospace;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    font-size: x-large;
+    color: white;
+    transition: .5s;
+  }
+  
+  .p-arrows button:hover{
+    background: white;
+    color: var(--skin-color);
+    border: 2px solid var(--skin-color);
+  }
+  
+  .thumbnail{
+    position: absolute;
+    bottom: 50px;
+    z-index: 11;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    height: 250px;
+    padding: 0 50px;
+    box-sizing: border-box;
+    overflow: auto;
+    justify-content: center;
+  }
+  
+  .thumbnail::-webkit-scrollbar{
+    width: 0;
+  }
+  
+  .thumbnail .slider-item{
+    width: 150px;
+    height: 220px;
+    filter: brightness(.5);
+    transition: .5s;
+    flex-shrink: 0;
+  }
+  
+  .thumbnail .slider-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  
+  .thumbnail .slider-item.active{
+    filter: brightness(1.5);
+  }
+  
+  .thumbnail .slider-item .purchase-content{
+    position: absolute;
+    inset: auto 10px 10px 10px;
+  }
+
+  .deployed {
+    background: var(--skin-color);
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+
+  .github{
+    background: white;
+    color: var(--skin-color);
+    border: 1px solid var(--skin-color);
+    padding: 10px 20px;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+  .deployed:hover{
+    background: white;
+    color: var(--skin-color)
+  }
+
+  .github:hover{
+    background: transparent;
+    color: white;
+  }
+
+  .slider-item img {
+    max-width: 100%; /* Ensure the image doesn't exceed its container width */
+    height: 100%; /* Maintain the image's aspect ratio */
+    display: block; /* Remove extra space under the image */
+    margin: 0 auto; /* Center the image within its container */
+    object-fit: contain;
+  }
+
+  
+  
+  @media screen and (max-width:678px){
+    .thumbnail{
+      justify-content: start;
+    }
+    .purchase-slider .slider-list .slider-item .purchase-content h2{
+      font-size: 60px;
+    }
+    .p-arrows{
+      top: 10%;
+    }
+  }
+
+
