--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@0;1&family=Bebas+Neue&family=Black+Ops+One&family=Clicker+Script&family=Montserrat&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bungee+Spice&family=Honk&family=Londrina+Solid:wght@300&family=Protest+Guerrilla&family=Racing+Sans+One&family=Rubik+Mono+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bungee+Spice&family=Honk&family=Londrina+Solid:wght@300&family=Racing+Sans+One&family=Rubik+Mono+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+
 
 /* styled by DonQuaya */
 :root{
@@ -1326,6 +1328,14 @@ h3.my-profession{
     /* background: red; */
   }
 
+  .purchase-slider .slider-list .slider-item .purchase-content p:nth-child(3){
+    font-family: "Kode Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  background: rgb(0, 0, 0);
+  color: var(--skin-color);
+  }
 
   .slider-item img{
     margin-left: 40px;
@@ -1469,10 +1479,10 @@ h3.my-profession{
   }
 
   .slider-item img {
-    max-width: 100%; /* Ensure the image doesn't exceed its container width */
-    height: 100%; /* Maintain the image's aspect ratio */
-    display: block; /* Remove extra space under the image */
-    margin: 0 auto; /* Center the image within its container */
+    max-width: 100%; 
+    height: 100%; 
+    display: block; 
+    margin: 0 auto; 
     object-fit: contain;
   }
 
@@ -1483,10 +1493,26 @@ h3.my-profession{
       justify-content: start;
     }
     .purchase-slider .slider-list .slider-item .purchase-content h2{
-      font-size: 60px;
+      font-size: 30px;
+      margin-top: 10px;
+    }
+    .purchase-slider .slider-list .slider-item .purchase-content p:nth-child(1){
+        font-size: 10px;
+        margin-top: 110px;
+    }
+    .purchase-slider .slider-list .slider-item .purchase-content p:nth-child(3){
+        font-size: 15px;
+        /* margin-top: -110px; */
     }
     .p-arrows{
-      top: 10%;
+      /* top: 10%; */
+    }
+    .thumbnail .slider-item{
+        display: none;
+    }
+    .purchase-slider .slider-list .slider-item .project-pics{
+        /* display: none; */
+        height: 200px;
     }
   }
 
@@ -1516,4 +1542,25 @@ h3.my-profession{
   font-family: "Rubik Mono One", monospace;
   font-weight: 400;
   font-style: normal;
+  }
+
+  /* .purchase-slider .slider-list .slider-item img{
+    
+  } */
+
+  /* .purchase-slider .slider-list .slider-item .project-pic{
+    margin-left: 50px;
+  } */
+
+
+ .purchase-slider .slider-list .slider-item .project-pic {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+  }  
+
+  .purchase-slider .slider-list .slider-item .project-pics{
+    width: 100%; 
+    height: 650px; 
+    object-fit: cover; 
   }
